--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,6 +37,23 @@
           <option value="suncare">Suncare</option>
           <option value="fragrance">Fragrance</option>
         </select>
+      </div>
+
+      <!-- Product Search Field -->
+      <div class="search-section" style="margin-top: 0">
+        <input
+          id="productSearch"
+          type="text"
+          placeholder="Search products by name or keyword…"
+          autocomplete="off"
+          style="
+            width: 100%;
+            padding: 16px;
+            font-size: 18px;
+            border: 2px solid #000;
+            border-radius: 8px;
+          "
+        />
       </div>
 
       <!-- Products Grid -->
